--- a/public/form.html
+++ b/public/form.html
@@ -38,10 +38,33 @@
             </div>
             <br>
             <button type="button" class="btn btn-primary" id="addBtn">Add</button>
-            <button type="button" class="btn btn-primary" id="editBtn">Apply</button>
+            <button type="button" class="btn btn-primary" id="editBtn" onclick="formValidation()">Apply</button>
           </form>
         </div>
       </div>
+
+      <div class="col-12 form-group">
+        <div class="d-flex" id="filterContainer">
+          <input type="text" class="form-control col-4" id="InputFilter" onchange="filterChange()"
+            placeholder="Enter Something">
+          <button type="button" class="btn btn-primary col-1 offset-1" id="filterBtn">Filter</button>
+          <button type="button" class="btn btn-primary col-2 offset-1" onclick="deleteAllRow()">Delete All</button>
+        </div>
+        <table class="table" id="FilterTable">
+          <thead>
+            <tr>
+              <th scope="col">Name</th>
+              <th scope="col">Phone</th>
+              <th scope="col">Gender</th>
+              <th scope="col">Func</th>
+            </tr>
+          </thead>
+          <tbody id="FilterTableBody">
+
+          </tbody>
+        </table>
+      </div>
+
       <div class="col-12">
         <table class="table" id="PhoneBook">
           <thead>
@@ -50,6 +73,7 @@
               <th scope="col">Phone</th>
               <th scope="col">Gender</th>
               <th scope="col">Func</th>
+              <th scope="col" onclick="checkAllRow()">Check all</th>
             </tr>
           </thead>
           <tbody>
@@ -64,6 +88,9 @@
                   <i class="far fa-trash-alt"></i>
                 </button>
               </td>
+              <td><input type="checkbox" aria-label="Checkbox for following text input" class="checkbox"
+                  onchange="checkRow(this)">
+              </td>
             </tr>
           </tbody>
         </table>
@@ -77,7 +104,31 @@
     let userName = ""
     let phone = ""
     let gender = ""
+    let filter = ""
     let seletedRow = null
+    let checkedRow = []
+
+    let data = [["Mark", "0943473", "Male"]]
+
+    const render = (table) => {
+      let MyTable = document.getElementById("FilterTableBody");
+      MyTable.innerHTML = ""
+
+      for (let rowData of table) {
+        console.log(rowData)
+        let NewRow = MyTable.insertRow();
+        let Newcell0 = NewRow.insertCell(0);
+        let Newcell1 = NewRow.insertCell(1);
+        let Newcell2 = NewRow.insertCell(2);
+        let Newcell3 = NewRow.insertCell(3);
+        let Newcell4 = NewRow.insertCell(4);
+        Newcell0.innerHTML = rowData[0];
+        Newcell1.innerHTML = rowData[1];
+        Newcell2.innerHTML = rowData[2];
+        Newcell3.innerHTML = '<button type="button" class="btn btn-success" id="editBtnFunc" onclick="editRow(this)"><i class="fas fa-edit"></i></button> <button type="button" class="btn btn-danger" onclick="deleteRow(this)"><i class="far fa-trash-alt"></i></button>'
+        Newcell4.innerHTML = '<input type="checkbox" aria-label="Checkbox for following text input" class="checkbox" onchange="checkRow(this)">'
+      }
+    }
 
     function nameChange() {
       userName = document.getElementById("InputName").value
@@ -85,27 +136,79 @@
     function phoneChange() {
       phone = document.getElementById("InputPhone").value
     }
+    function filterChange() {
+      filter = document.getElementById("InputFilter").value
+    }
     function genderChange() {
       if (document.getElementById("exampleRadios1").checked) {
         gender = "Male"
       } else gender = "Female"
     }
 
+    function checkAllRow() {
+      let arr = []
+      for (let i = 1; i < document.getElementById("PhoneBook").rows.length; i++) {
+        document.getElementsByClassName("checkbox")[i - 1].checked = true
+        arr.push(i - 1)
+      }
+      checkedRow = arr
+      console.log(checkedRow)
+    }
+
+    function deleteAllRow() {
+      let count = 0
+      for (let i in checkedRow) {
+        document.getElementById("PhoneBook").deleteRow(checkedRow[i] + 1 - count);
+        count++
+      }
+      checkedRow = []
+    }
+
+    function checkRow(r) {
+      let i = r.parentNode.parentNode.rowIndex;
+      if (document.getElementsByClassName("checkbox")[i - 1].checked) {
+        checkedRow.push(i - 1)
+      } else {
+        let arr = checkedRow.filter(j => j != i - 1)
+        checkedRow = arr
+      }
+      console.log(checkedRow)
+    }
+
+    function formValidation() {
+      let regexName = /[^a-zA-Z]/g
+      if (regexName.test(userName)) {
+        alert("Only Word allow");
+        return false;
+      }
+
+      let regexPhone = /0+([0-9]{9})/
+      if (regexPhone.test(phone) === false) {
+        alert("Must be real phone number");
+        return false;
+      }
+      return true
+    }
+
     document.getElementById("addBtn").addEventListener("click", function (event) {
       event.preventDefault()
+      if (formValidation()) {
+        data.push([userName, phone, gender])
 
-      let MyTable = document.getElementById("PhoneBook");
-
-      // insert new row. 
-      let NewRow = MyTable.insertRow();
-      let Newcell0 = NewRow.insertCell(0);
-      let Newcell1 = NewRow.insertCell(1);
-      let Newcell2 = NewRow.insertCell(2);
-      let Newcell3 = NewRow.insertCell(3);
-      Newcell0.innerHTML = userName;
-      Newcell1.innerHTML = phone;
-      Newcell2.innerHTML = gender;
-      Newcell3.innerHTML = '<button type="button" class="btn btn-success" id="editBtnFunc" onclick="editRow(this)"><i class="fas fa-edit"></i></button> <button type="button" class="btn btn-danger" onclick="deleteRow(this)"><i class="far fa-trash-alt"></i></button>'
+        let MyTable = document.getElementById("PhoneBook");
+        //insert new row. 
+        let NewRow = MyTable.insertRow();
+        let Newcell0 = NewRow.insertCell(0);
+        let Newcell1 = NewRow.insertCell(1);
+        let Newcell2 = NewRow.insertCell(2);
+        let Newcell3 = NewRow.insertCell(3);
+        let Newcell4 = NewRow.insertCell(4);
+        Newcell0.innerHTML = userName;
+        Newcell1.innerHTML = phone;
+        Newcell2.innerHTML = gender;
+        Newcell3.innerHTML = '<button type="button" class="btn btn-success" id="editBtnFunc" onclick="editRow(this)"><i class="fas fa-edit"></i></button> <button type="button" class="btn btn-danger" onclick="deleteRow(this)"><i class="far fa-trash-alt"></i></button>'
+        Newcell4.innerHTML = '<input type="checkbox" aria-label="Checkbox for following text input" class="checkbox" onchange="checkRow(this)">'
+      }
     });
 
     function deleteRow(r) {
@@ -116,7 +219,6 @@
     function editRow(r) {
       let j = r.parentNode.parentNode.rowIndex;
       seletedRow = r.parentNode.parentNode;
-
       document.getElementById('addBtn').style.visibility = 'hidden'
       document.getElementById("editBtn").style.visibility = "visible"
 
@@ -131,13 +233,32 @@
 
     document.getElementById("editBtn").addEventListener("click", function (event) {
       event.preventDefault()
-
       document.getElementById('addBtn').style.visibility = 'visible'
       document.getElementById("editBtn").style.visibility = "hidden"
 
       seletedRow.cells[0].innerText = userName
       seletedRow.cells[1].innerText = phone
       seletedRow.cells[2].innerText = gender
+    })
+
+    document.getElementById("filterBtn").addEventListener("click", function (event) {
+      let filterRow = []
+      let filterData = []
+      event.preventDefault()
+      for (let i in data) {
+        for (let j in data[i]) {
+          if (filter === data[i][j]) {
+            filterRow.push(i)
+          }
+        }
+      }
+
+      for (let n in data) {
+        if (filterRow.includes(n)) {
+          filterData.push(data[n])
+        } else continue
+      }
+      render(filterData)
     })
 
   </script>
@@ -155,10 +276,11 @@
 
 <style>
   .formContainer {
-    /* display: flex;
-    justify-content: center;
-    align-items: center; */
     margin: 60px 0px;
+  }
+
+  #filterContainer {
+    margin-bottom: 30px;
   }
 </style>
 
